--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="app_name">planner_android</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    
+    <string name="edit_message_hint">Hint! Enter a message</string>
+    <string name="button_send">Send</string>
+    <string name="title_activity_main">Planner Main</string>
 
 </resources>
